--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -3,7 +3,7 @@
     "login": "Login",
     "register": "Register",
     "adminPanel": "Admin Panel",
-    "disasterMatch": "DisasterMatch",
+    "disasterMatch": "Leads",
     "profile": "Profile",
     "logout": "Logout",
     "themeDark": "Dark mode",
@@ -37,6 +37,7 @@
     "cards": "Cards",
     "table": "Table",
     "loadingIncidents": "Loading incidents...",
+    "loadingProfile": "Loading profile...",
     "proceedToCheckout": "Proceed to Checkout",
     "incidentsSelected": "{{count}} incidents selected",
     "total": "Total:",
