--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -3,7 +3,7 @@
     "login": "Iniciar sesión",
     "register": "Registrarse",
     "adminPanel": "Panel Admin",
-    "disasterMatch": "DisasterMatch",
+    "disasterMatch": "Leads",
     "profile": "Perfil",
     "logout": "Cerrar sesión",
     "themeDark": "Modo oscuro",
@@ -37,6 +37,7 @@
     "cards": "Tarjetas",
     "table": "Tabla",
     "loadingIncidents": "Cargando incidentes...",
+    "loadingProfile": "Cargando perfil...",
     "proceedToCheckout": "Proceder al pago",
     "incidentsSelected": "{{count}} incidentes seleccionados",
     "total": "Total:",
