--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -182,7 +182,59 @@
   "terms": {
     "title": "Terms of Use",
     "lastUpdated": "Last updated: {{date}}",
-    "contactIntro": "Contact."
+    "intro": "Welcome to DisasterMatch. These Terms of Use (\"Terms\") govern your access to and use of the DisasterMatch website, products, and services. By accessing or using our platform, you agree to be bound by these Terms.",
+    "section1": {
+      "title": "1. Who May Use the Service",
+      "p1": "You must be at least 18 years old to register for an account or purchase content on DisasterMatch. By using the Service you represent and warrant that you are at least 18 and have legal capacity to enter into these Terms.",
+      "p2": "The Service is available to any individual or business. DisasterMatch’s intended audience includes contractors working with insurance companies, but anyone may create an account and purchase incident data cards."
+    },
+    "section2": {
+      "title": "2. Description of Service",
+      "p1": "DisasterMatch aggregates and presents incident data (\"Incident Cards\" or \"Cards\") that are compiled from third-party sources, including paid third‑party websites and public emergency call records. Each Card displays information such as state, city, a short description, date and time, and an indication whether the Card is “complete” or “incomplete.”",
+      "p2": "When you purchase a Card, DisasterMatch delivers the information associated with that Card to the email address you provide during checkout (for example, purchase confirmation and incident details as in the sample email included on our site).",
+      "p3": "A Card marked complete indicates DisasterMatch has captured all key fields for that incident. A Card marked incomplete means one or more key data fields (for example: phone, email, or address) are missing; incomplete Cards are priced lower."
+    },
+    "section3": {
+      "title": "3. Account Registration and Security",
+      "p1": "To use certain features you must create an account. You agree to provide accurate, current, and complete information and to update it as needed. You are responsible for maintaining the confidentiality of your account credentials and for all activity that occurs under your account. Notify us immediately of any unauthorized use of your account.",
+      "p2": "You may not share account credentials, and you agree not to transfer or sell your account without DisasterMatch’s prior written consent."
+    },
+    "section4": {
+      "title": "4. Purchases, Payment, and Invoicing",
+      "p1": "All purchases are one‑time purchases for the specific Card(s) bought. We do not offer subscriptions or commission-based arrangements by default.",
+      "p2": "By purchasing a Card you authorize DisasterMatch to charge the payment method provided. You are responsible for any applicable taxes. After purchase, DisasterMatch will send a confirmation email and an invoice (when applicable) to the email address you supply. The confirmation email will contain the details of the purchased incidents.",
+      "p3": "No refunds. All purchases are final and non-refundable once the incident details are delivered to you. To the fullest extent permitted by law, purchases are non-refundable even if the information later proves to be inaccurate or incomplete."
+    },
+    "section5": {
+      "title": "5. Use of Incident Data and Restrictions",
+      "p1": "The data you purchase is licensed to you for your lawful business use only. You may not:\n- Represent that DisasterMatch guarantees the accuracy, completeness, or timeliness of any incident data.\n- Reproduce, resell, redistribute, or publicly publish purchased incident data for the benefit of third parties, except as expressly permitted in writing by DisasterMatch.\n- Use the Service to stalk\n- Use the Service to violate any law or regulation.\n- Interfere with or disrupt the integrity or performance of the Service.\n- Attempt to access accounts, systems, or networks without authorization.\n- Reverse engineer or attempt to extract the source code or data from the Service.\nWe reserve the right to suspend or terminate accounts that violate these Terms."
+    },
+    "section11": {
+      "title": "11. Termination",
+      "p1": "We may suspend or terminate your access to the Service at any time for any reason, including for breach of these Terms or for suspected unlawful activity. Termination does not relieve you of obligations that accrued prior to termination, including payment obligations and indemnity obligations."
+    },
+    "section12": {
+      "title": "12. Indemnification",
+      "p1": "You agree to indemnify and hold DisasterMatch and its officers, directors, employees and agents harmless from any claims, liabilities, damages, losses, and expenses (including reasonable attorneys’ fees and costs) arising from or related to your use of the Service, your breach of these Terms, or your violation of any law or the rights of a third party."
+    },
+    "section13": {
+      "title": "13. Disclaimers and Limitation of Liability",
+      "p1": "DISCLAIMER OF WARRANTIES. TO THE MAXIMUM EXTENT PERMITTED BY LAW, DISASTERMATCH DISCLAIMS ALL WARRANTIES, EXPRESS OR IMPLIED, INCLUDING ANY IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, TITLE, AND NON‑INFRINGEMENT.",
+      "p2": "LIMITATION OF LIABILITY. TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, DISASTERMATCH’S AGGREGATE LIABILITY ARISING OUT OF OR RELATED TO THESE TERMS OR YOUR USE OF THE SERVICE SHALL NOT EXCEED THE AMOUNT PAID BY YOU TO DISASTERMATCH FOR THE PURCHASE GIVING RISE TO THE CLAIM. IN NO EVENT SHALL DISASTERMATCH BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES."
+    },
+    "section14": {
+      "title": "14. Governing Law and Venue",
+      "p1": "These Terms are governed by the laws of the United States and applicable state laws, without regard to conflict‑of‑law principles. To the extent a claim cannot be subject to mandatory arbitration under applicable law, you and DisasterMatch agree to submit to the exclusive jurisdiction and venue of the state and federal courts located in the United States for resolution of disputes, unless otherwise required by applicable law."
+    },
+    "section15": {
+      "title": "15. Changes to These Terms",
+      "p1": "We may modify these Terms from time to time. When we make changes we will post the updated Terms on the Service with a revised \"Last updated\" date. Your continued use of the Service after changes become effective constitutes your acceptance of the revised Terms."
+    },
+    "section16": {
+      "title": "16. Miscellaneous",
+      "p1": "If any provision of these Terms is found to be unenforceable, that provision will be limited or eliminated to the minimum extent necessary so that these Terms will otherwise remain in full force and effect. These Terms constitute the entire agreement between you and DisasterMatch regarding the Service.",
+      "p2": "Contact. If you have questions about these Terms, please contact us at: support@disastermatch.com"
+    }
   },
   "footer": {
     "terms": "Terms",
@@ -192,5 +244,72 @@
     "contact": "Contact",
     "contactForm": "Contact form",
     "copyright": "© {{year}} {{name}}. All rights reserved."
+  },
+  "faq": {
+    "title": "Frequently Asked Questions (FAQ)",
+    "q1": {
+      "question": "1. What is Disaster Match?",
+      "answer1": "Disaster Match is a platform that connects people affected by disasters with contractors or professionals who offer their services to assist them."
+    },
+    "q2": {
+      "question": "2. How does the information purchase system work?",
+      "answer1": "When a contractor wants to learn more about a specific incident (for example, a property affected by fire), they can purchase full access to the affected person’s information. This includes contact details, a description of the damage, and the approximate location."
+    },
+    "q3": {
+      "question": "3. Who can register on Disaster Match?",
+      "answer1": "Anyone can register on the platform:",
+      "answer2": "- Contractors or companies looking to offer their services to affected individuals.\n- Individuals who want to request assistance after a disaster."
+    },
+    "q4": {
+      "question": "4. Is it safe to purchase information on the platform?",
+      "answer1": "Yes. Disaster Match protects users’ personal data through strong security protocols and only shares information with verified contractors who purchase access to incident details."
+    },
+    "q5": {
+      "question": "5. How can I purchase information about an affected person?",
+      "answer1": "Go to the “Available Incidents” section, select the case you’re interested in, and click “Add to Cart.” The system will display the price in your cart. Once payment is confirmed, you’ll gain full access to the affected person’s details and incident information."
+    },
+    "q6": {
+      "question": "6. What payment methods does Disaster Match accept?",
+      "answer1": "Currently, we accept credit and debit card payments, as well as other electronic payment options depending on the user’s region."
+    },
+    "q7": {
+      "question": "7. What happens after purchasing the information?",
+      "answer1": "Once the purchase is complete, you’ll be able to view all the details of the incident and the contact information of the affected person to offer your services or coordinate assistance directly."
+    },
+    "q8": {
+      "question": "8. Can I modify or delete my account?",
+      "answer1": "Yes. In the “Profile” section, you can update your personal information or request permanent deletion of your account at any time."
+    },
+    "q9": {
+      "question": "9. What if I have a problem with payment or viewing an incident?",
+      "answer1": "You can contact our support team through the live chat for immediate assistance with any payment or access issues."
+    },
+    "q10": {
+      "question": "10. Can I use Disaster Match from my phone?",
+      "answer1": "Yes. Disaster Match is fully compatible with mobile devices and can be accessed through any modern web browser."
+    },
+    "q11": {
+      "question": "11. How can I search for a specific disaster?",
+      "answer1": "In the “Available Incidents” section, you can use advanced filters to find specific or general cases.",
+      "answer2": "Filters allow you to search by disaster type (fire, flood, earthquake, etc.), location, date of the incident, or reported damage level."
+    }
+  },
+  "contactForm": {
+    "title": "Contact Us",
+    "subtitle": "Send us a message and we will reply soon",
+    "name": "Your Name",
+    "namePlaceholder": "John Doe",
+    "email": "Your Email",
+    "emailPlaceholder": "you@example.com",
+    "message": "Your Message",
+    "messagePlaceholder": "Write your message...",
+    "send": "Send Message",
+    "sending": "Sending...",
+    "successToast": "Message sent successfully!",
+    "successTitle": "Message Sent!",
+    "successText": "We will get back to you soon.",
+    "error": "Error",
+    "serverError": "Server not available",
+    "back": "Back"
   }
 }
