--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -101,8 +101,11 @@
     "save": "Save",
     "cancel": "Cancel",
     "username": "Username",
+    "fName": "Name",
+    "lastName": "LastName",
     "email": "Email",
     "phone": "Phone",
+    "address": "Address",
     "company": "Company",
     "purchasedIncidents": "Purchased Incidents",
     "noPurchased": "No incidents purchased yet.",
