--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -101,8 +101,11 @@
     "save": "Guardar",
     "cancel": "Cancelar",
     "username": "Usuario",
+    "fName": "Nombre",
+    "lastName": "Apellido",
     "email": "Correo",
     "phone": "Teléfono",
+    "address": "Dirección",
     "company": "Empresa",
     "purchasedIncidents": "Incidentes comprados",
     "noPurchased": "Aún no has comprado incidentes.",
