--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -3,7 +3,7 @@
     "login": "Iniciar sesión",
     "register": "Registrarse",
     "adminPanel": "Panel Admin",
-    "disasterMatch": "Leads",
+    "disasterMatch": "Dirige",
     "profile": "Perfil",
     "logout": "Cerrar sesión",
     "themeDark": "Modo oscuro",
