--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -9,7 +9,8 @@
     "themeDark": "Dark mode",
     "themeLight": "Light mode",
     "language": "Language",
-    "users": "Users"
+    "users": "Users",
+    "zones": "Zones"
   },
   "landing": {
     "title": "Unlock more opportunities to win new clients and contracts",
