--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -9,7 +9,8 @@
     "themeDark": "Modo oscuro",
     "themeLight": "Modo claro",
     "language": "Idioma",
-    "users": "Usuarios"
+    "users": "Usuarios",
+    "zones": "Zonas"
   },
   "landing": {
     "title": "Desbloquea más oportunidades para ganar nuevos clientes y contratos",
