--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -124,7 +124,37 @@
     "delete": "Delete",
     "saveSuccess": "User updated successfully",
     "deleteConfirmTitle": "Are you sure?",
-    "deleteConfirmText": "You won't be able to revert this."
+    "deleteConfirmText": "You won't be able to revert this.",
+    "resetTempButton": "Reset Temp Password",
+    "resetTempTitle": "Set temporary password for {{username}}?",
+    "resetTempHint": "Leave blank to auto-generate a secure password.",
+    "resetTempConfirm": "Reset password",
+    "resetTempFailed": "Failed to reset password",
+    "resetTempEmailed": "Temporary password set and emailed to the user.",
+    "resetTempSuccessCopied": "Temporary password created and copied to clipboard",
+    "resetTempSuccess": "Temporary password created",
+    "resetTempServerError": "Error communicating with server",
+    "resetTempDialogTitle": "Temporary password",
+    "resetTempDialogUser": "User",
+    "resetTempDialogPassword": "Password",
+    "resetTempDialogNote": "It was also sent by email to the user."
+  },
+  "changePassword": {
+    "title": "Change your password",
+    "subtitle": "For security, you must set a new password before continuing.",
+    "email": "Email",
+    "userId": "User ID",
+    "currentTempPassword": "Current (temporary) password",
+    "newPassword": "New password",
+    "placeholderNew": "At least 8 chars, mixed case, number, special",
+    "confirmNewPassword": "Confirm new password",
+    "update": "Update password",
+    "backToLogin": "Back to Login",
+    "errorMissingUserId": "Missing userId. Please login again with your temporary password.",
+    "errorSame": "New password must be different from current password",
+    "errorChangeFailed": "Failed to change password",
+    "success": "Password updated. Please login with your new password.",
+    "hintEnterDetails": "If fields are empty, enter your User ID and email or login again with your temporary password."
   },
   "reports": {
     "overview": "Reports Overview",
