--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -124,7 +124,37 @@
     "delete": "Eliminar",
     "saveSuccess": "Usuario actualizado correctamente",
     "deleteConfirmTitle": "¿Estás seguro?",
-    "deleteConfirmText": "No podrás revertir esto."
+    "deleteConfirmText": "No podrás revertir esto.",
+    "resetTempButton": "Restablecer contraseña temporal",
+    "resetTempTitle": "¿Establecer una contraseña temporal para {{username}}?",
+    "resetTempHint": "Deja en blanco para generar automáticamente una contraseña segura.",
+    "resetTempConfirm": "Restablecer contraseña",
+    "resetTempFailed": "Error al restablecer la contraseña",
+    "resetTempEmailed": "Se estableció la contraseña temporal y se envió por correo al usuario.",
+    "resetTempSuccessCopied": "Contraseña temporal creada y copiada al portapapeles",
+    "resetTempSuccess": "Contraseña temporal creada",
+    "resetTempServerError": "Error al comunicar con el servidor",
+    "resetTempDialogTitle": "Contraseña temporal",
+    "resetTempDialogUser": "Usuario",
+    "resetTempDialogPassword": "Contraseña",
+    "resetTempDialogNote": "También fue enviada por correo al usuario."
+  },
+  "changePassword": {
+    "title": "Cambia tu contraseña",
+    "subtitle": "Por seguridad, debes establecer una nueva contraseña antes de continuar.",
+    "email": "Correo",
+    "userId": "ID de usuario",
+    "currentTempPassword": "Contraseña actual (temporal)",
+    "newPassword": "Nueva contraseña",
+    "placeholderNew": "Mínimo 8 caracteres, mayúsculas/minúsculas, número y símbolo",
+    "confirmNewPassword": "Confirmar nueva contraseña",
+    "update": "Actualizar contraseña",
+    "backToLogin": "Volver a iniciar sesión",
+    "errorMissingUserId": "Falta el userId. Inicia sesión de nuevo con tu contraseña temporal.",
+    "errorSame": "La nueva contraseña debe ser distinta a la actual",
+    "errorChangeFailed": "No se pudo cambiar la contraseña",
+    "success": "Contraseña actualizada. Inicia sesión con tu nueva contraseña.",
+    "hintEnterDetails": "Si los campos están vacíos, ingresa tu ID de usuario y correo o vuelve a iniciar sesión con tu contraseña temporal."
   },
   "reports": {
     "overview": "Resumen de informes",
