--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -45,7 +45,8 @@
     "verifiedDetail": "Includes full address, phone number and email.",
     "incompleteDetail": "Missing one or more key data such as phone, email or address.",
   "soldLabel": "Sold:",
-  "soldDetail": "This lead has already been purchased and its price has been reduced by 50%."
+  "soldDetail": "This lead has already been purchased and its price has been reduced by 50%.",
+  "temporaryLimitNote": "Temporary update: Each user can purchase one lead at this time while we roll out some testing. Thanks for your understanding."
   },
   "login": {
     "welcome": "Welcome back",
