--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -45,7 +45,8 @@
     "verifiedDetail": "Incluye dirección completa, número de teléfono y correo electrónico.",
     "incompleteDetail": "Falta uno o más datos clave, como teléfono, correo electrónico o dirección.",
     "soldLabel": "Vendido:",
-    "soldDetail": "Este lead ya fue comprado y su precio se redujo en un 50%."
+    "soldDetail": "Este lead ya fue comprado y su precio se redujo en un 50%.",
+    "temporaryLimitNote": "Actualización temporal: Por ahora, cada usuario puede comprar un solo lead mientras realizamos algunas pruebas. Gracias por tu comprensión."
   },
   "login": {
     "welcome": "Bienvenido de nuevo",
