--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -3,7 +3,7 @@
     "login": "Iniciar sesión",
     "register": "Registrarse",
     "adminPanel": "Panel Admin",
-    "disasterMatch": "Dirige",
+    "disasterMatch": "Incidentes",
     "profile": "Perfil",
     "logout": "Cerrar sesión",
     "themeDark": "Modo oscuro",
@@ -126,7 +126,7 @@
     "saveSuccess": "Usuario actualizado correctamente",
     "deleteConfirmTitle": "¿Estás seguro?",
     "deleteConfirmText": "No podrás revertir esto.",
-    "resetTempButton": "Restablecer contraseña temporal",
+    "resetTempButton": "Contraseña temporal",
     "resetTempTitle": "¿Establecer una contraseña temporal para {{username}}?",
     "resetTempHint": "Deja en blanco para generar automáticamente una contraseña segura.",
     "resetTempConfirm": "Restablecer contraseña",
